fix: Add align-items property to nav class

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
 
 .nav {
   display: flex;
+  align-items: center;
   justify-content: space-around;
 }
 
